# spark-code-challenge

./: .gitignore  .pre-commit-config.yaml  INFRASTRUCTURE.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
conf/: spark-defaults.conf
dags/: medallion_pipeline_dag.py
docker/airflow/: Dockerfile
docker/jupyter/: Dockerfile
docker/spark/: Dockerfile
notebooks/: questions.ipynb
scripts/: run_questions.py
src/billups_pipeline/: __init__.py  bronze.py  config.py  gold.py  io_utils.py  pipeline.py  schemas.py  session.py  silver.py  transforms.py
tests/: conftest.py  test_transforms.py
